# mse

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENCE  README.md
.github/workflows/: cmake-multi-platform.yml
backends/cnes/: CMakeLists.txt
backends/cnes/include/cNES/: apu.h  bus.h  cpu.h  mapper.h  nes.h  palette.h  ppu.h  rom.h  tas.h  util.h  version.h
backends/cnes/include/cNES/loaders/: ines.h
backends/cnes/include/cNES/scripting/: lua_api.h
backends/cnes/src/: apu.c  backend.c  bus.c  cpu.c  mapper.c  nes.c  palette.c  ppu.c  rom.c  tas.c
backends/cnes/src/loaders/: ines.c
backends/cnes/src/scripting/: lua_api.c
backends/cnes/tests/: CMakeLists.txt  cnes_headless.c
backends/cnes/tests/AccuracyCoin/: CMakeLists.txt  README.md  dump.txt  test.lua  test_page_0_CPU_Behavior.lua  test_page_10_CPU_Behavior_2.lua  test_page_1_Addressing_Mode_Wraparound.lua  test_page_2_CPU_Interrupts.lua  test_page_3_APU_Registers_and_DMA_tests.lua  test_page_4_APU_Tests.lua  test_page_5_Power_On_State.lua  test_page_6_PPU_Behavior.lua  test_page_7_PPU_VBlank_Timing.lua  test_page_8_Sprite_Evaluation.lua  test_page_9_PPU_Misc.lua
backends/cnes/tests/cpu_dummy_writes/: test.lua
backends/cnes/tests/instr_test-v5/: CMakeLists.txt  instr_test.lua
backends/cnes/tests/nestest/: CMakeLists.txt
data/: LUA_API.md
data/shaders/glsl/: passthrough.frag  passthrough.vert
examples/test_backend/: CMakeLists.txt
examples/test_backend/src/: backend.c
ext/: CMakeLists.txt
frontend/: CMakeLists.txt
frontend/src/: cimgui_hex.c  cimgui_hex.h  cimgui_markdown.c  cimgui_markdown.h  frontend_app.c  frontend_app.h  frontend_cimgui.h  frontend_help.c  frontend_icons.h  frontend_imgui.c  frontend_imgui.h  frontend_input.c  frontend_input.h  frontend_logs.c  frontend_settings.c  frontend_terminal.c  frontend_theme.c  frontend_theme.h  frontend_ui.c  frontend_ui.h  main.c
include/libmse/: debug.h  libmse.h  libmse_api.h  libmse_backend.h  libmse_cvar.h  libmse_file.h  libmse_frame.h  libmse_gfx.h  libmse_gfx_internal.h  libmse_input.h  libmse_sync.h  libmse_version.h
src/frontend/: cimgui_markdown.c  cimgui_markdown.h  frontend_app.c  frontend_app.h  frontend_cimgui.h  frontend_help.c  frontend_icons.h  frontend_imgui.c  frontend_imgui.h  frontend_input.c  frontend_logs.c  frontend_settings.c  frontend_terminal.c  frontend_theme.c  frontend_theme.h  frontend_ui.c  frontend_ui.h  main.c
src/libmse/: debug.c  file_registry.c  libmse.c  libmse_cvar.c  libmse_gfx.c  libmse_sync.c
